Major Android app refactor
This change breaks up some big classes into smaller, more independent pieces and introduces more abstraction that will ensure testing can be implemented more smoothly in the future. The coding standards and code inspections have been updated to be very strict, to enforce a strong and consistent code style, and to help me improve my own knowledge of Java and Android, as I am currently the only developer of this project.

Unit testing will be introduced in a later commit that works based upon these changes.

This refactor affects every single class in the Hauk Android app module.